Fixing bug 50914. Migrated profiles were missing mimeTypes.rdf file. Added code to copy a default mimeTypes.rdf file into the migrated profile directory. r,sr=mscott